--- a/index.html
+++ b/index.html
@@ -206,10 +206,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <img src="assets/thumbs/mirth.png" width="250" alt="Mirth Connect" title="Mirth Connect">
       </a>
       </div>
-
       <div class="w3-col m4">
-        <img src="assets/thumbs/php-mysql-logo.png" width="200" alt="PHP MySQL" title="PHP MySQL">
+        <a href="http://www.hl7.org" target="_blank">
+          <img src="assets/thumbs/hl7_logo.jpg" width="200" alt="HL7 International" title="HL7 International">
+        </a>
       </div>
+
 
 
     </div>
@@ -223,6 +225,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://www.postgresql.org/" target="_blank">
         <img src="assets/thumbs/postgresql-logo.png" width="200" alt="PostgreSQL Database" title="PostgreSQL Database">
       </a>
+      </div>
+      <div class="w3-col m4">
+        <img src="assets/thumbs/php-mysql-logo.png" width="200" alt="PHP MySQL" title="PHP MySQL">
       </div>
     </div>
 
