added css effects

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-container" style="margin-bottom:32px">
 
-    <p>Hey there! I'm Charmie Quiño, I graduated Bachelor of Science in Nursing and found myself aiming to be a Health IT professional. Currently, my skill set is ranges from technical support, systems analyst, Mirth integration, software testing and web development. I'm currently taking the FreeCodeCamp course and hopefully to finish the Full Stack course.</p>
+    <p>Hey there! I'm Charmie Quiño, I graduated Bachelor of Science in Nursing and found myself aiming to be a Health IT professional. Currently, my skill set ranges from technical support, systems analysis, Mirth integration, software testing and web development. I'm currently taking the FreeCodeCamp course and hopefully to finish the Full Stack course.</p>
     <p>I love Javascript and that's the language I'm most comfortable with, I can use it not only in web but also in Mirth (which is a popular open-source HL7 interface engine). I love solving problems and connecting things.</p>
     <p>My goal is to create a product that would give an impact on the health IT industry, making health care delivery better using technology.</p>
     <h2>Skills &amp; Tools</h2>
