added text on about me

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <p>Hey there! I'm Charmie Quiño, I graduated Bachelor of Science in Nursing and found myself aiming to be a Health IT professional. Currently, my skill set ranges from technical support, systems analysis, Mirth integration, software testing and web development. I'm currently taking the <a href="https://www.freecodecamp.com" target="_blank">FreeCodeCamp</a> course and hopefully to finish the Full Stack Web Development course.</p>
     <p>I love Javascript and that's the language I'm most comfortable with, I can use it not only in web but also in Mirth (which is a popular open-source HL7 interface engine). I love solving problems and connecting things, especially using Mirth for custom integrations between EMRs and LIS.</p>
     <p>My goal is to create a product that would give an impact on the health IT industry, making health care delivery better using technology.</p>
-    <p>If you find my skill set interesting or shares the same passion for health tech, feel free to reach me on my social media accounts. Cheers!</p>
+    <p>If you find my skill set interesting or shares the same passion for health tech, feel free to reach me out on my social media accounts. Cheers!</p>
     <h2>Skills &amp; Tools</h2>
     <div class="w3-row-padding">
       <div class="w3-col m4">
