updated about me section

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </div>
 
   <!-- About Me -->
-  <div class="w3-row-padding w3-padding-16" id="about">
+  <div class="" id="about">
     <div class="w3-container w3-teal">
       <h1><b>About Me</b></h1>
     </div>
-  </div>
 
-  <div class="w3-container" style="margin-bottom:32px">
+
+  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
     <p>Hey there! I'm Charmie Quiño, I graduated Bachelor of Science in Nursing and found myself aiming to be a Health IT professional. Currently, my skill set ranges from technical support, systems analysis, Mirth integration, software testing and web development. I'm currently taking the <a href="https://www.freecodecamp.com" target="_blank">FreeCodeCamp</a> course and hopefully to finish the Full Stack Web Development course.</p>
     <p>I love Javascript and that's the language I'm most comfortable with, I can use it not only in web but also in Mirth (which is a popular open-source HL7 interface engine). I love solving problems and connecting things, especially using Mirth for custom integrations between EMRs and LIS.</p>
@@ -233,15 +233,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
 
     <hr>
-
+    </div>
   </div>
 
   <!-- Contact Section -->
-  <div class="w3-row-padding">
+  <div class="" id="contact">
     <div class="w3-container w3-teal">
-      <h1 id="contact"><b>Contact Me</b></h1>
+      <h1><b>Contact Me</b></h1>
     </div>
-    <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
+    <div class="w3-container w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-white w3-border">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-black"></i></p>
         <p><a href="mailto:charmiequino@gmail.com">charmiequino@gmail.com</a></p>
