corrected typos and errors

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <a href="http://lifedata.ph" target="_blank"><img src="assets/thumbs/lifedata_systems_logo.jpg" alt="LiFEDATA Systems Inc logo" style="width:100%" class="w3-hover-opacity"></a>
         <div class="w3-container w3-white">
           <p><b>Systems and Technical Support EMR</b></p>
-          <p>Worked at LiFEDATA Systems Inc., a local software company, as a Systems and Technical Support Staff in one of their client's EMR. Work involves daily troubleshooting, debugging, reporting of errors, analysis and understaing of the workflow of the clinic and how to implement it on current EMR. Writing short scripts to resolve issues.</p>
+          <p>Worked at LiFEDATA Systems Inc., a local software company, as a Systems and Technical Support Staff in one of their client's EMR. Work involves daily troubleshooting, debugging, reporting of errors, analysis and understanding of the workflow of the clinic and how to implement it on current EMR. Writing short scripts to resolve issues.</p>
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://www.jotform.com" target="_blank"><img src="assets/thumbs/podo_9.png" alt="JotForm Logo" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>JotForm Technical Support</b></p>
-        <p>Problem Solver, Tech Support and Script Kiddie in JotForm. JotForm is an online form builder that allows you to create online forms. The form builder is continuously evolving but allows users to highly customize their forms. My work here is a tech support in our forum page helping users with their form creation, creating customize CSS code and scripts to accomplish what their needs. I also create highly detailed guides to walk through users on how to use a feature of the form builde and some with customized solutions. There are requirements or specifications that is unique for some user, so I provide them different solutions that I can think of, raning from a combination of 3rd party applications and creating custom scripts, or by cleverly using existing existing features on a different way. Some of the custom scripts can be found on my Github page <a href="https://github.com/LightDev777/JotForm-Scripts" target="_blank">here</a>.</p>
+        <p>Problem Solver, Tech Support and Script Kiddie in JotForm. JotForm is an online form builder that allows you to create online forms. The form builder is continuously evolving but allows users to highly customize their forms. My work here is a tech support in our forum page helping users with their form creation, creating customize CSS code and scripts to accomplish what their needs. I also create highly detailed guides to walk through users on how to use a feature of the form builde and some with customized solutions. There are requirements or specifications that is unique for some user, so I provide them different solutions that I can think of, ranging from a combination of 3rd party applications and creating custom scripts, or by cleverly using existing features on a different way. Some of the custom scripts can be found on my Github page <a href="https://github.com/LightDev777/JotForm-Scripts" target="_blank">here</a>.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
