--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://www.upwork.com" target="_blank"><img src="assets/thumbs/upwork-logo-1200.png" alt="Upwork Logo" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Upwork Freelancer</b></p>
-        <p>Most of my work are in Upwork.com (formerly oDesk.com), I've been doing work here for almost 6 years now. I started fromo personal assistant, chat support, web analyst, tech support, web research for health IT topics like tele-oncology and tele-medicine, and now a clinical laboratory applications analyst. This is a great platform to connect clients and contractors, I'm continuously trying to learn things with focus on web development and health IT. Feel free to check my <a href="https://www.upwork.com/o/profiles/users/_~01274749b75bc97a54/" target="_blank">Upwork page</a> to see my work history.</p>
+        <p>Most of my work are in Upwork.com (formerly oDesk.com), I've been doing work here for almost 6 years now. I've done different work like being a personal assistant, chat support, web analyst, tech support, web research for health IT topics like teleoncology and telemedicine, and now a clinical laboratory applications analyst. This is a great platform to connect clients and contractors, I'm continuously trying to learn things with focus on web development and health IT. Feel free to check my <a href="https://www.upwork.com/o/profiles/users/_~01274749b75bc97a54/" target="_blank">Upwork page</a> to see my work history.</p>
       </div>
     </div>
   </div>
