added back end projects

--- a/index.html
+++ b/index.html
@@ -105,7 +105,68 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div id="web-section" class="w3-container">
   <h2>Web Development</h2>
-  <!-- First Photo Grid-->
+  <!-- Back End Projects -->
+  <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href="https://github.com/LightDev777/img-search-serv" target="_blank"><img src="" alt="Image Search Abstraction Layer" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Image Search Abstraction Layer</b></p>
+        <p>FreeCodeCamp Back End Development course project. This service does the following user stories:</p>
+        <ul>
+          <li>
+            User Story: I can get the image URLs, alt text and page urls for a set of images relating to a given search string.
+          </li>
+          <li>
+            Story: I can paginate through the responses by adding a ?offset=2 parameter to the URL.
+          </li>
+          <li>
+            Story: I can get a list of the most recently submitted search strings.
+          </li> 
+        </ul>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href="https://github.com/LightDev777/file-metadata-serv" target="_blank"><img src="" alt="File Metadata Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>File Metadata Microservice</b></p>
+        <p>FreeCodeCamp Back End Development course project. This Microservice does the following user stories:</p>
+        <ul>
+          <li>
+            I can submit a FormData object that includes a file upload.
+          </li>
+          <li>
+            When I submit something, I will receive the file size in bytes within the JSON response
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="w3-third w3-container">
+      <a href="https://github.com/LightDev777/url-shortener-microservice" target="_blank"><img src="" alt="URL Shortener Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>URL Shortener Microservice</b></p>
+        <p>FreeCodeCamp Back End Development course project. Allows you to generate a short URL for specific links.</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href="https://github.com/LightDev777/fcc-timestamp-microservice" target="_blank"><img src="" alt="Timstamp Microservice API" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Timstamp Microservice API</b></p>
+        <p>FreeCodeCamp Back End Development course project. This displays or returns the unix timestamp and the natural date if you pass a string in the URL parameter.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href="https://github.com/LightDev777/fcc-header-parser-microservice" target="_blank"><img src="" alt="Request Header Parser Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Request Header Parser Microservice</b></p>
+        <p>FreeCodeCamp Back End Development course project. This is a simple app that will display the browser's IP address, language and operating system based on the request headers.</p>
+      </div>
+    </div>
+  </div> 
+
+  <!-- Front End Projects -->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://codepen.io/lightdev777/full/YQMoMa" target="_blank"><img src="assets/thumbs/fcc-simon-game.png" alt="FCC Simon Game" style="width:100%" class="w3-hover-opacity"></a>
@@ -130,7 +191,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 
-  <!-- Second Photo Grid-->
+
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://codepen.io/lightdev777/full/BZwbrQ" target="_blank"><img src="assets/thumbs/fcc-pomodoro-clock.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
@@ -155,7 +216,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 
-  <!-- Third Photo Grid-->
+
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://codepen.io/lightdev777/full/BWZpzO" target="_blank"><img src="assets/thumbs/fcc-wikipedia-viewer.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
