added default image for api projects

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Back End Projects -->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/img-search-serv" target="_blank"><img src="" alt="Image Search Abstraction Layer" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/LightDev777/img-search-serv" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Image Search Abstraction Layer" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Image Search Abstraction Layer</b></p>
         <p>FreeCodeCamp Back End Development course project. This service does the following user stories:</p>
@@ -126,7 +126,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/file-metadata-serv" target="_blank"><img src="" alt="File Metadata Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/LightDev777/file-metadata-serv" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="File Metadata Microservice" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>File Metadata Microservice</b></p>
         <p>FreeCodeCamp Back End Development course project. This Microservice does the following user stories:</p>
@@ -141,24 +141,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="https://github.com/LightDev777/url-shortener-microservice" target="_blank"><img src="" alt="URL Shortener Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/LightDev777/url-shortener-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="URL Shortener Microservice" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>URL Shortener Microservice</b></p>
         <p>FreeCodeCamp Back End Development course project. Allows you to generate a short URL for specific links.</p>
       </div>
     </div>
   </div>
-  
+
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/fcc-timestamp-microservice" target="_blank"><img src="" alt="Timstamp Microservice API" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/LightDev777/fcc-timestamp-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Timstamp Microservice API" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Timstamp Microservice API</b></p>
         <p>FreeCodeCamp Back End Development course project. This displays or returns the unix timestamp and the natural date if you pass a string in the URL parameter.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/fcc-header-parser-microservice" target="_blank"><img src="" alt="Request Header Parser Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/LightDev777/fcc-header-parser-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Request Header Parser Microservice" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Request Header Parser Microservice</b></p>
         <p>FreeCodeCamp Back End Development course project. This is a simple app that will display the browser's IP address, language and operating system based on the request headers.</p>
