updated skill with nodejs and remove php mysql

--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </a>
       </div>
       <div class="w3-col m4">
-        <img src="assets/thumbs/php-mysql-logo.png" width="200" alt="PHP MySQL" title="PHP MySQL">
+        <a href="https://nodejs.org/en/" target="_blank">
+          <img src="https://en.wikipedia.org/wiki/Node.js#/media/File:Node.js_logo.svg" width="200" alt="NodeJS" title="NodeJS">
+        </a>
       </div>
     </div>
 
