--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
       <div class="w3-col m4">
         <a href="https://nodejs.org/en/" target="_blank">
-          <img src="https://en.wikipedia.org/wiki/Node.js#/media/File:Node.js_logo.svg" width="200" alt="NodeJS" title="NodeJS">
+          <img src="assets/thumbs/node.jpg" width="200" alt="NodeJS" title="NodeJS">
         </a>
       </div>
     </div>
