Updated github username link

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#contact" id="id_contact" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
   <div class="w3-panel w3-large anchor-link-fa">
-    <a href="https://github.com/LightDev777" target="_blank"><i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i></a>
+    <a href="https://github.com/litemikx" target="_blank"><i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i></a>
     <a href="https://twitter.com/charmito05" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/charmiequino/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-    <a href="https://www.freecodecamp.org/portfolio/lightdev777" target="_blank"><i class="fa fa-free-code-camp w3-hover-opacity" aria-hidden="true"></i></a>
+    <a href="https://www.freecodecamp.org/portfolio/litemikx" target="_blank"><i class="fa fa-free-code-camp w3-hover-opacity" aria-hidden="true"></i></a>
   </div>
 </nav>
 
@@ -108,7 +108,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Back End Projects -->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/img-search-serv" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Image Search Abstraction Layer" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/litemikx/img-search-serv" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Image Search Abstraction Layer" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Image Search Abstraction Layer</b></p>
         <p>FreeCodeCamp Back End Development course project. This service does the following user stories:</p>
@@ -126,7 +126,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/file-metadata-serv" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="File Metadata Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/litemikx/file-metadata-serv" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="File Metadata Microservice" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>File Metadata Microservice</b></p>
         <p>FreeCodeCamp Back End Development course project. This Microservice does the following user stories:</p>
@@ -141,7 +141,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="https://github.com/LightDev777/url-shortener-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="URL Shortener Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/litemikx/url-shortener-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="URL Shortener Microservice" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>URL Shortener Microservice</b></p>
         <p>FreeCodeCamp Back End Development course project. Allows you to generate a short URL for specific links.</p>
@@ -151,14 +151,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/fcc-timestamp-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Timstamp Microservice API" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/litemikx/fcc-timestamp-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Timstamp Microservice API" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Timstamp Microservice API</b></p>
         <p>FreeCodeCamp Back End Development course project. This displays or returns the unix timestamp and the natural date if you pass a string in the URL parameter.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://github.com/LightDev777/fcc-header-parser-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Request Header Parser Microservice" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://github.com/litemikx/fcc-header-parser-microservice" target="_blank"><img src="assets/thumbs/api-default-img.png" alt="Request Header Parser Microservice" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Request Header Parser Microservice</b></p>
         <p>FreeCodeCamp Back End Development course project. This is a simple app that will display the browser's IP address, language and operating system based on the request headers.</p>
@@ -169,21 +169,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Front End Projects -->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://codepen.io/lightdev777/full/YQMoMa" target="_blank"><img src="assets/thumbs/fcc-simon-game.png" alt="FCC Simon Game" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/YQMoMa" target="_blank"><img src="assets/thumbs/fcc-simon-game.png" alt="FCC Simon Game" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Simon Game</b></p>
         <p>FreeCodeCamp Front End Development course project. Re-create the Simon game in Codepen using HTML, CSS and Javascript.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://codepen.io/lightdev777/full/NjMreY" target="_blank"><img src="assets/thumbs/fcc-tic-tac-toe-game.png" alt="FCC Tic-Tac-Toe Game" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/NjMreY" target="_blank"><img src="assets/thumbs/fcc-tic-tac-toe-game.png" alt="FCC Tic-Tac-Toe Game" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Tic-Tac-Toe Game</b></p>
         <p>FreeCodeCamp Front End Development course project. Create a Tic-Tac-Toe game in Codepen using HTML, CSS and Javascript. For the one player mode, I've implemented the Minimax algorithm. The computer is unbeatable on this case.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="https://codepen.io/lightdev777/full/eRZEpo" target="_blank"><img src="assets/thumbs/fcc-basic-calculator.png" alt="FCC Basic Calculator" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/eRZEpo" target="_blank"><img src="assets/thumbs/fcc-basic-calculator.png" alt="FCC Basic Calculator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Basic Calculator</b></p>
         <p>FreeCodeCamp Front End Development course project. Create a basic calculator in Codepen using HTML, CSS and Javascript.</p>
@@ -194,21 +194,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://codepen.io/lightdev777/full/BZwbrQ" target="_blank"><img src="assets/thumbs/fcc-pomodoro-clock.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/BZwbrQ" target="_blank"><img src="assets/thumbs/fcc-pomodoro-clock.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Pomodoro Clock</b></p>
         <p>A timer using the Pomodoro technique. The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. The technique uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks. This web application allows you to set the session and break time to customize your time management.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://codepen.io/lightdev777/full/bqNVPe" target="_blank"><img src="assets/thumbs/fcc-random-quote-generator.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/bqNVPe" target="_blank"><img src="assets/thumbs/fcc-random-quote-generator.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Random Quote Generator</b></p>
         <p>A simple web application that randomly selects a quote from a list. You can also use the Tweet button to share the quote in the Twitterverse.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="https://codepen.io/lightdev777/full/OpwVMp" target="_blank"><img src="assets/thumbs/fcc-twitch-tv.png" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/OpwVMp" target="_blank"><img src="assets/thumbs/fcc-twitch-tv.png" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - TwitchTV Listing</b></p>
         <p>Show a specific list of Twitch users. Their status is pulled using Twitch.tv's JSON API. You can filter the list to who's online or offline.</p>
@@ -219,14 +219,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://codepen.io/lightdev777/full/BWZpzO" target="_blank"><img src="assets/thumbs/fcc-wikipedia-viewer.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/BWZpzO" target="_blank"><img src="assets/thumbs/fcc-wikipedia-viewer.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Wikipedia Viewer</b></p>
         <p>This is a simple search function in the Wikipedia database.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://codepen.io/lightdev777/full/XMXwoo" target="_blank"><img src="assets/thumbs/fcc-weather-forecast.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://codepen.io/litemikx/full/XMXwoo" target="_blank"><img src="assets/thumbs/fcc-weather-forecast.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Local Weather App</b></p>
         <p>This is a simple web app showing the current weather in your location. It shows your location (city and country), current temperature and the weather condition. I'm using Yahoo's weather API. The background image changes depending on the current weather condition. The temperature can also be toggled between Celsius and Fahrenheit.</p>
