--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="https://twitter.com/charmito05" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/charmiequino/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <a href="https://www.freecodecamp.org/litemikx" target="_blank"><i class="fa fa-free-code-camp w3-hover-opacity" aria-hidden="true"></i></a>
+    <a href="https://stackoverflow.com/users/8259656/charmie-qui%c3%b1o" target="_blank"><i class="fa fa-stack-overflow w3-hover-opacity" aria-hidden="true"></i></a>
   </div>
 </nav>
 
