--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-white">
         <p><b>Covid19PHResources.org</b></p>
         <p>Year 2020 and the world was hit by CoViD-19. Since I am no longer a practicing nurse and I'm in the Health IT field, my best way to contribute is to create a website and spread information usable for Filipinos during the crisis.</p>
-        <p>You can visit the site at <a href="https://www.covid19phresources.org" target="_blank">Covid19PHResources.org</a>.</p>
+        <p>You can visit the site at <a href="http://www.covid19phresources.org" target="_blank">Covid19PHResources.org</a>.</p>
       </div>
     </div>
   </div>
