added blog link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#portfolio" id="id_portfolio" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>PORTFOLIO</a>
     <a href="#about" id="id_about" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a>
     <a href="#contact" id="id_contact" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
-    <a href="./pages/blog.html" id="id_blog" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pencil fa-fw w3-margin-right"></i>BLOG</a>
+    <a href="https://kailo.tech" id="id_blog" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pencil fa-fw w3-margin-right"></i>BLOG</a>
   </div>
   <div class="w3-panel w3-large anchor-link-fa">
     <a href="https://github.com/litemikx" target="_blank"><i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i></a>
